[gd_scene load_steps=8 format=3 uid="uid://bbnp464b7lsqu"]

[ext_resource type="FontFile" uid="uid://cpvjaaf7m2c25" path="res://fonts/Xolonium-Regular.ttf" id="1_ahhtf"]
[ext_resource type="Script" uid="uid://682eepadmwnh" path="res://script/hud.gd" id="1_oo0fn"]
[ext_resource type="PackedScene" uid="uid://mloykayr205r" path="res://scenes/hudinfo.tscn" id="3_5ysmq"]

[sub_resource type="InputEventAction" id="InputEventAction_5ysmq"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_6fi6k"]
events = [SubResource("InputEventAction_5ysmq")]

[sub_resource type="InputEventAction" id="InputEventAction_6fi6k"]
action = &"info"

[sub_resource type="Shortcut" id="Shortcut_uo2fv"]
events = [SubResource("InputEventAction_6fi6k")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_oo0fn")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -239.5
offset_right = 239.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 64
text = "Dodge the Creeps!"
horizontal_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = -140.0
offset_right = 250.0
offset_bottom = -40.0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_6fi6k")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HealthLabel" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -78.0
offset_right = -20.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 64

[node name="InfoButton" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -200.0
offset_top = -140.0
offset_right = -50.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_uo2fv")
text = "Info"

[node name="HUDINFO" parent="." instance=ExtResource("3_5ysmq")]
visible = false

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="InfoButton" to="." method="_on_info_button_pressed"]
